--- a/src/GithubPoc/Views/_ViewImports.cshtml
+++ b/src/GithubPoc/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using GithubSandbox
-@using GithubSandbox.Models
+﻿@using GithubPoc
+@using GithubPoc.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
